specs/buildit-jenkins-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: buildit-jenkins-deployment
  labels:
    app: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: buildit-jenkins
        image: combined-registry.sbx.zone/builditdigital/jenkins-image:1.0.8-alpine
        ports:
        - containerPort: 8080
