specs/buildit-jenkins-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: buildit-jenkins-service
spec:
  selector:
    app: jenkins
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
