specs/buildit-jenkins-all-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: buildit-jenkins
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: jenkins
---
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: buildit-jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - image: builditdigital/jenkins-image:1.0.9-alpine
        name: jenkins
        ports:
        - containerPort: 8080
          name: http
---
# Follow this to install nginx ingress controller: https://github.com/nginxinc/kubernetes-ingress/blob/master/docs/installation.md
# I would recommend a daemon-set, which will run nginx on all nodes and expose ports 80/443 on them
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: buildit-jenkins-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  # Your DNS has to be able to resolve this hostname
  - host: buildit-jenkins.portworx.zone
    http:
      paths:
      - backend: 
          serviceName: buildit-jenkins
          servicePort: 80
